--- a/addpage.html
+++ b/addpage.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="addpage.css">
 </head>
 <body>
-    <div class="form">
+    <div id="form">
         <input type="search" placeholder="Id" class="id">
         <input type="search" placeholder="Name" class="name">
         <input type="search" placeholder="Price in dollars" class="price">
