--- a/addpage.html
+++ b/addpage.html
@@ -4,16 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="addpage.css">
 </head>
 <body>
     <div id="form">
+
+    <script src="addpage.js" defer></script>
+</head>
+<body>
+
+    <div class="form">
+
         <input type="search" placeholder="Id" class="id">
         <input type="search" placeholder="Name" class="name">
         <input type="search" placeholder="Price in dollars" class="price">
         <input type="search" placeholder="description" class="description">
-        <input type="search" placeholder="url img" class="img"> 
-    </div>    
+        <input type="search" placeholder="url img" class="img">
+
+        <button class="generateorder">generate order</button>
+    </div>
+
+    <div class="result"></div>
+
     
 </body>
 </html>
