--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="abc.js"></script>
 </head>
 <body>
-    
+    <h1>My Lego</h1>
+
+    <div id="form"></div>
+
+    <script src="abc.js"></script>
 </body>
+
 </html>
