--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <script src="abc.js"></script>
-    <link rel="stylesheet" href="a">
+   <link rel="stylesheet" href="a.css">
 
 </head>
 <body>
